--- a/views/new.ejs
+++ b/views/new.ejs
@@ -88,13 +88,13 @@
         <h3>Write a New Chat</h3>
         <form method="post" action="/chats">
             <label for="from">Who are you?</label>
-            <input id="from" placeholder="Enter your name" name="from" type="text" required>
+            <input id="from" placeholder="Enter your name" name="from" type="text" >
 
             <label for="msg">Message</label>
-            <textarea id="msg" name="msg" placeholder="Write your message here..." required></textarea>
+            <textarea id="msg" name="msg" placeholder="Write your message here..." ></textarea>
 
             <label for="to">Receiver</label>
-            <input id="to" placeholder="Enter receiver's name" name="to" type="text" required>
+            <input id="to" placeholder="Enter receiver's name" name="to" type="text" >
 
             <div class="btn-group">
                 <button type="submit">Create Chat</button>
