--- a/public/style.css
+++ b/public/style.css
@@ -143,6 +143,22 @@ main h3 {
     background-color: #b71c1c;
 }
 
+.show {
+    background-color: #121212;
+    color: white;
+    padding: 6px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 0.9rem;
+    transition: background-color 0.3s ease, transform 0.3s ease
+}
+
+.show:hover {
+    transform: scale(1.05);
+}
+
+
 /* Separator */
 hr {
     margin: 10px 0;
